--- a/i18n/strings_en.json
+++ b/i18n/strings_en.json
@@ -1,46 +1,57 @@
 {
-    "NAME": "EVO SABRE PLUGIN",
-    "PLUGIN_CONFIGURATION": "EVO SABRE",
-    "SAVE": "Save",
-    "UI": {
-        "OLED_CONTRAST_DOC": "Set the contrast for OLED#2.<br>Value must be between 0-255.",
-        "OLED_CONTRAST_LABEL": "Contrast",
-        "OLED_SCREENSAVER_DOC": "How long (in seconds) OLED#2 will keep displaying date & time before entering screen saver mode when no track is being played.",
-        "OLED_SCREENSAVER_LABEL": "Delay before screen saver",
-        "OLED_DEEPSLEEP_DOC": "How long (in seconds) OLED#2 will keep displaying its screen saver animation before entering deep sleep mode.<br>You can also disable the screen saver animation by setting this to 0.",
-        "OLED_DEEPSLEEP_LABEL": "Delay before deep sleep",
-        "OLED_RESTART_LABEL": "Restart OLED#2",
-        "OLED_RESTART_DOC": "Use this button to restart OLED#2 script.", 
-		"OLED_ENABLE": "Enable OLED#2",
-		"OLED_ENABLE_DOC": "Disable/enable the Volumio3 secondary display layer (rightmost screen)",
-		"CONFIG_UPDATE": "Configuration updated.",
-		"CONFIG_NOCHANGE": "Nothing changed in configuration.",
-		"REMOTE_ENABLE": "Enable Remote",
-		"REMOTE_ENABLE_DOC": "Disable/enable the Volumio3 remote layer (playback control). The DAC functions (source, volume) are handled by the board and cannot be disabled.",
-		"REMOTE_DIAGNOSE": "Check remote status",
-		"REMOTE_DIAGNOSE_DOC": "Click here to querry the system and diagnose the remote services if something seems to be not working as expected.",
-		"REMOTE_DIAGNOSE_OK": "Remote Configuration OK",
-		"REMOTE_DIAGNOSE_REMOTE_DETECTED": "LIRC is using the correct remote",
-		"OPEN_PLUGDOC" : "Help for Evo Sabre Configuration",
-		"OPEN_PLUGDOC_DOC" : "Read the documentation to configure your Evo Sabre."
-    },
-    "ERRORS": {
-    "SYSTEMD_FAIL": "Failed to start the systemd service",
-		"REMOTE_DIAGNOSE_DISABLED" : "You must enable the remote service before you can query whether it is working properly. The first install also requires a reboot.",
-		"REMOTE_DIAGNOSE_ERROR" : "Fatal error with remote service. Please reboot your Evo Sabre and reinstall this plugin if you see this message again.",
-		"REMOTE_DIAGNOSE_CONFLICT" : "Something is wrong in your remote configuration. You may want to reboot your Evo Sabre to see if problem persists. If so simply reinstall this plugin and make sure there is no other plugin using the LIRC remote configuration."
-    },
-	"DOCUMENTATION": {
-		"title" : "Configuring your Evo Sabre for Volumio",
-		"intro" : "Thank you for using this plugin for your Audiophonics Evo Sabre.<br>Installing and enabling will configure the second rightmost display and the remote control to work within Volimio.<br><strong>PLease note that this version of the plugin now requires a reboot for both the remote and the display</strong></br>Both the display and the remote can be enabled / disabled from this plugin page.",
-		"conf" :  "Volumio has a couple more options that you should be dealing with before trying to play music.  Here are a few directions to help you configure your Evo Sabre and get the best sound experience.",
-		"dac" :  "If you have not done that already during Volumio first boot Wizard, you should configure the ES9038 DAC as an audio output. Go to Settings -> Playback Options -> Audio Output (<a href=\"plugin/audio_interface-alsa_controller\">here</a>) and tell the system you are using a I2S DAC. Then select \"Audiophonics I-Sabre ES9028Q2M\" in the drop-down menu.",
-		"dsd" :  "In Settings -> Playback Options -> General Playback Options -> DSD Playback Mode, select DSD over PCM (DOP)",
-		"vol_curve" :  "In Settings -> Playback Options -> General Playback Options -> Volume Curve Mode, select Linear",
-		"vol" : "In Settings -> Playback Options -> Volume Options -> Mixer Type, select \"Hardware\". Next pick \"Digital\" as option for the Mixer Control Name option just below.",
-		"mpd" :  "We recommend enabling MPD Clients Volume Control as well (also in Settings -> Playback Options -> Volume Options)",
-		"off_note_title" : "Note about the poweroff function",
-		"off_note" :  "The poweroff function on your remote control and on the Evo Sabre front panel is hardcorded within the DAC board (cannot be disabled) and does not perform a graceful shutdown on the Raspberry Pi. We strongly recommend you turn off the Evo Sabre through Volumio WebUi <strong>then</strong> use the hardware shutdown function.",
-		"moar" : "If you have issues, questions or feedback about this plugin, please use the GitHub repository dedicated to the development of this plugin (<a target='_blank' href='https://github.com/audiophonics/volumio-plugins-sources/tree/master/audiophonics_evosabre'>https://github.com/audiophonics/volumio-plugins-sources/tree/master/audiophonics_evosabre</a>)."
-	}
+  "NAME": "Quadify Plugin",
+  "PLUGIN_CONFIGURATION": "Quadify Settings",
+  "SAVE": "Save",
+  "UI": {
+    "GENERAL_SETTINGS": "General Settings",
+    "DISPLAY_SETTINGS": "Display & Fonts",
+    "HARDWARE_SETTINGS": "Hardware",
+    "I2C_DETECT_LABEL": "Detect MCP23017",
+    "I2C_DETECT_DOC": "Automatically scan and set the I2C address for your MCP23017 chip. Click to detect and update the config.",
+    "I2C_ADDRESS_LABEL": "MCP23017 Address",
+    "I2C_ADDRESS_DOC": "Set the I2C address for your MCP23017 (e.g. 0x20). This is needed for buttons/LEDs control.",
+    "IR_REMOTE_ENABLE": "Enable IR Remote",
+    "IR_REMOTE_ENABLE_DOC": "Enable or disable IR remote support. Choose your remote and GPIO pin.",
+    "IR_REMOTE_TYPE": "Remote Type",
+    "IR_REMOTE_TYPE_DOC": "Select your remote control type for correct configuration.",
+    "IR_GPIO_PIN": "GPIO Pin for IR",
+    "IR_GPIO_PIN_DOC": "Choose which Raspberry Pi GPIO pin your IR receiver is connected to.",
+    "ROTARY_ENABLE": "Enable Rotary Encoder",
+    "ROTARY_ENABLE_DOC": "Enable or disable rotary encoder support (for volume or menu navigation).",
+    "ROTARY_CLK_PIN": "Rotary CLK Pin",
+    "ROTARY_DT_PIN": "Rotary DT Pin",
+    "ROTARY_SW_PIN": "Rotary SW Pin",
+    "DISPLAY_TEST": "Test Display",
+    "DISPLAY_TEST_DOC": "Click to show a test pattern or info on the display.",
+    "DISPLAY_REFRESH_RATE": "Refresh Rate (Hz)",
+    "DISPLAY_REFRESH_RATE_DOC": "Set how often the display refreshes per second.",
+    "SAVE_SETTINGS": "Save Settings",
+    "SAVE_SETTINGS_DOC": "Save all changes to Quadify configuration.",
+    "CONFIG_UPDATE": "Configuration updated.",
+    "CONFIG_NOCHANGE": "No changes to configuration.",
+    "RESTART_QUADIFY": "Restart Quadify",
+    "RESTART_QUADIFY_DOC": "Apply changes by restarting the Quadify service.",
+    "LOG_LEVEL": "Log Level",
+    "LOG_LEVEL_DOC": "Set how much information Quadify writes to its log file.",
+    "OPEN_PLUGDOC": "Quadify Documentation",
+    "OPEN_PLUGDOC_DOC": "Read the official Quadify guide and troubleshooting help.",
+    "BUTTONSLEDS_ENABLE": "Enable Buttons & LEDs",
+    "BUTTONSLEDS_ENABLE_DOC": "Enable physical button and LED control (requires MCP23017).",
+    "RADIO_SETTINGS": "Radio Presets",
+    "FONTS_SETTINGS": "Fonts Configuration"
+  },
+  "ERRORS": {
+    "SYSTEMD_FAIL": "Failed to start the Quadify service.",
+    "REMOTE_FAIL": "IR remote configuration failed. Check connections and settings.",
+    "I2C_DETECT_FAIL": "Could not detect MCP23017. Is it connected?",
+    "CONFIG_FILE_ERROR": "Could not update the config.yaml file.",
+    "RESTART_REQUIRED": "Changes require a system restart."
+  },
+  "DOCUMENTATION": {
+    "title": "Configuring Quadify for Volumio",
+    "intro": "Welcome to the Quadify plugin! This tool adds powerful display, button/LED, rotary, and remote support to Volumio 3. All hardware features can be enabled or configured here. Changes will be saved to your Quadify config and applied on restart.",
+    "setup": "To get started, connect your hardware (OLED display, buttons, rotary encoder, IR receiver) and use the controls above to configure pins, addresses, and features. Click 'Detect MCP23017' to auto-scan I2C address if using buttons/LEDs.",
+    "troubleshooting": "If you encounter problems, check wiring first, then ensure all dependencies were installed. View logs for details.",
+    "help": "For detailed help or to report bugs, visit the Quadify GitHub repository."
+  }
 }
